--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=8081
+server.servlet.context-path=/app
 
+example.value.name=felipe
+example.value.lastname=diaz
+example.value.random=${random.value}
+
+user.email=example@example.com
+user.password=12345
+user.age=27
+
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+
+spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
